09__/python/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    GENERATE_RAYFILES
    LIGHT
    BASENAME
    VARY
    TEXTURE
    SAVE_COORDS
    FRAMES
    SHADING_TYPE
    CAMERA
    SHADING
    FOCAL
    FUNCTION
    WEB
    CO
    SAVE_KNOBS
    TWEEN
    MESH
    AMBIENT
    CONSTANTS

Grammar

Rule 0     S' -> stuff
Rule 1     stuff -> <empty>
Rule 2     stuff -> statement stuff
Rule 3     statement -> COMMENT
Rule 4     statement -> POP
Rule 5     statement -> PUSH
Rule 6     statement -> SCREEN INT INT
Rule 7     statement -> SCREEN
Rule 8     statement -> SAVE
Rule 9     statement -> SAVE TEXT
Rule 10    statement -> DISPLAY TEXT
Rule 11    statement -> DISPLAY
Rule 12    statement -> SET SYMBOL NUMBER
Rule 13    statement -> SET_KNOBS NUMBER
Rule 14    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
Rule 15    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
Rule 17    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 18    statement -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 19    statement -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 21    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 22    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 23    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 25    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    statement -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 27    statement -> MOVE NUMBER NUMBER NUMBER
Rule 28    statement -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 29    statement -> SCALE NUMBER NUMBER NUMBER
Rule 30    statement -> ROTATE XYZ NUMBER SYMBOL
Rule 31    statement -> ROTATE XYZ NUMBER
Rule 32    SYMBOL -> XYZ
Rule 33    SYMBOL -> ID
Rule 34    TEXT -> SYMBOL
Rule 35    TEXT -> STRING
Rule 36    NUMBER -> DOUBLE
Rule 37    NUMBER -> INT

Terminals, with rules where they appear

AMBIENT              : 
BASENAME             : 
BEZIER               : 22 23
BOX                  : 18
CAMERA               : 
CIRCLE               : 20 21
CO                   : 
COMMENT              : 3
CONSTANTS            : 
DISPLAY              : 10 11
DOUBLE               : 36
FOCAL                : 
FRAMES               : 
FUNCTION             : 
GENERATE_RAYFILES    : 
HERMITE              : 24 25
ID                   : 33
INT                  : 6 6 14 14 16 16 21 22 24 37
LIGHT                : 
LINE                 : 19
MESH                 : 
MOVE                 : 26 27
POP                  : 4
PUSH                 : 5
ROTATE               : 30 31
SAVE                 : 8 9
SAVE_COORDS          : 
SAVE_KNOBS           : 
SCALE                : 28 29
SCREEN               : 6 7
SET                  : 12
SET_KNOBS            : 13
SHADING              : 
SHADING_TYPE         : 
SPHERE               : 14 15
STRING               : 35
TEXTURE              : 
TORUS                : 16 17
TWEEN                : 
VARY                 : 
WEB                  : 
XYZ                  : 30 31 32
error                : 

Nonterminals, with rules where they appear

NUMBER               : 12 13 14 14 14 14 15 15 15 15 16 16 16 16 16 17 17 17 17 17 18 18 18 18 18 18 19 19 19 19 19 19 20 20 20 20 20 20 20 21 21 21 21 21 21 21 22 22 22 22 22 22 22 22 22 22 22 22 23 23 23 23 23 23 23 23 23 23 23 23 24 24 24 24 24 24 24 24 24 24 24 24 25 25 25 25 25 25 25 25 25 25 25 25 26 26 26 27 27 27 28 28 28 29 29 29 30 31
SYMBOL               : 12 26 28 30 34
TEXT                 : 9 10
statement            : 2
stuff                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . stuff
    (1) stuff -> .
    (2) stuff -> . statement stuff
    (3) statement -> . COMMENT
    (4) statement -> . POP
    (5) statement -> . PUSH
    (6) statement -> . SCREEN INT INT
    (7) statement -> . SCREEN
    (8) statement -> . SAVE
    (9) statement -> . SAVE TEXT
    (10) statement -> . DISPLAY TEXT
    (11) statement -> . DISPLAY
    (12) statement -> . SET SYMBOL NUMBER
    (13) statement -> . SET_KNOBS NUMBER
    (14) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
    (15) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (17) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (18) statement -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (19) statement -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (22) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (23) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (25) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) statement -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (27) statement -> . MOVE NUMBER NUMBER NUMBER
    (28) statement -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (29) statement -> . SCALE NUMBER NUMBER NUMBER
    (30) statement -> . ROTATE XYZ NUMBER SYMBOL
    (31) statement -> . ROTATE XYZ NUMBER

    $end            reduce using rule 1 (stuff -> .)
    COMMENT         shift and go to state 6
    POP             shift and go to state 9
    PUSH            shift and go to state 12
    SCREEN          shift and go to state 14
    SAVE            shift and go to state 20
    DISPLAY         shift and go to state 5
    SET             shift and go to state 7
    SET_KNOBS       shift and go to state 10
    SPHERE          shift and go to state 15
    TORUS           shift and go to state 13
    BOX             shift and go to state 1
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 19
    BEZIER          shift and go to state 17
    HERMITE         shift and go to state 8
    MOVE            shift and go to state 3
    SCALE           shift and go to state 2
    ROTATE          shift and go to state 16

    stuff                          shift and go to state 18
    statement                      shift and go to state 11

state 1

    (18) statement -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 23

state 2

    (28) statement -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (29) statement -> SCALE . NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 24

state 3

    (26) statement -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (27) statement -> MOVE . NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 25

state 4

    (19) statement -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 26

state 5

    (10) statement -> DISPLAY . TEXT
    (11) statement -> DISPLAY .
    (34) TEXT -> . SYMBOL
    (35) TEXT -> . STRING
    (32) SYMBOL -> . XYZ
    (33) SYMBOL -> . ID

    COMMENT         reduce using rule 11 (statement -> DISPLAY .)
    POP             reduce using rule 11 (statement -> DISPLAY .)
    PUSH            reduce using rule 11 (statement -> DISPLAY .)
    SCREEN          reduce using rule 11 (statement -> DISPLAY .)
    SAVE            reduce using rule 11 (statement -> DISPLAY .)
    DISPLAY         reduce using rule 11 (statement -> DISPLAY .)
    SET             reduce using rule 11 (statement -> DISPLAY .)
    SET_KNOBS       reduce using rule 11 (statement -> DISPLAY .)
    SPHERE          reduce using rule 11 (statement -> DISPLAY .)
    TORUS           reduce using rule 11 (statement -> DISPLAY .)
    BOX             reduce using rule 11 (statement -> DISPLAY .)
    LINE            reduce using rule 11 (statement -> DISPLAY .)
    CIRCLE          reduce using rule 11 (statement -> DISPLAY .)
    BEZIER          reduce using rule 11 (statement -> DISPLAY .)
    HERMITE         reduce using rule 11 (statement -> DISPLAY .)
    MOVE            reduce using rule 11 (statement -> DISPLAY .)
    SCALE           reduce using rule 11 (statement -> DISPLAY .)
    ROTATE          reduce using rule 11 (statement -> DISPLAY .)
    $end            reduce using rule 11 (statement -> DISPLAY .)
    STRING          shift and go to state 27
    XYZ             shift and go to state 30
    ID              shift and go to state 31

    TEXT                           shift and go to state 28
    SYMBOL                         shift and go to state 29

state 6

    (3) statement -> COMMENT .

    COMMENT         reduce using rule 3 (statement -> COMMENT .)
    POP             reduce using rule 3 (statement -> COMMENT .)
    PUSH            reduce using rule 3 (statement -> COMMENT .)
    SCREEN          reduce using rule 3 (statement -> COMMENT .)
    SAVE            reduce using rule 3 (statement -> COMMENT .)
    DISPLAY         reduce using rule 3 (statement -> COMMENT .)
    SET             reduce using rule 3 (statement -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (statement -> COMMENT .)
    SPHERE          reduce using rule 3 (statement -> COMMENT .)
    TORUS           reduce using rule 3 (statement -> COMMENT .)
    BOX             reduce using rule 3 (statement -> COMMENT .)
    LINE            reduce using rule 3 (statement -> COMMENT .)
    CIRCLE          reduce using rule 3 (statement -> COMMENT .)
    BEZIER          reduce using rule 3 (statement -> COMMENT .)
    HERMITE         reduce using rule 3 (statement -> COMMENT .)
    MOVE            reduce using rule 3 (statement -> COMMENT .)
    SCALE           reduce using rule 3 (statement -> COMMENT .)
    ROTATE          reduce using rule 3 (statement -> COMMENT .)
    $end            reduce using rule 3 (statement -> COMMENT .)


state 7

    (12) statement -> SET . SYMBOL NUMBER
    (32) SYMBOL -> . XYZ
    (33) SYMBOL -> . ID

    XYZ             shift and go to state 30
    ID              shift and go to state 31

    SYMBOL                         shift and go to state 32

state 8

    (24) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (25) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 33

state 9

    (4) statement -> POP .

    COMMENT         reduce using rule 4 (statement -> POP .)
    POP             reduce using rule 4 (statement -> POP .)
    PUSH            reduce using rule 4 (statement -> POP .)
    SCREEN          reduce using rule 4 (statement -> POP .)
    SAVE            reduce using rule 4 (statement -> POP .)
    DISPLAY         reduce using rule 4 (statement -> POP .)
    SET             reduce using rule 4 (statement -> POP .)
    SET_KNOBS       reduce using rule 4 (statement -> POP .)
    SPHERE          reduce using rule 4 (statement -> POP .)
    TORUS           reduce using rule 4 (statement -> POP .)
    BOX             reduce using rule 4 (statement -> POP .)
    LINE            reduce using rule 4 (statement -> POP .)
    CIRCLE          reduce using rule 4 (statement -> POP .)
    BEZIER          reduce using rule 4 (statement -> POP .)
    HERMITE         reduce using rule 4 (statement -> POP .)
    MOVE            reduce using rule 4 (statement -> POP .)
    SCALE           reduce using rule 4 (statement -> POP .)
    ROTATE          reduce using rule 4 (statement -> POP .)
    $end            reduce using rule 4 (statement -> POP .)


state 10

    (13) statement -> SET_KNOBS . NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 34

state 11

    (2) stuff -> statement . stuff
    (1) stuff -> .
    (2) stuff -> . statement stuff
    (3) statement -> . COMMENT
    (4) statement -> . POP
    (5) statement -> . PUSH
    (6) statement -> . SCREEN INT INT
    (7) statement -> . SCREEN
    (8) statement -> . SAVE
    (9) statement -> . SAVE TEXT
    (10) statement -> . DISPLAY TEXT
    (11) statement -> . DISPLAY
    (12) statement -> . SET SYMBOL NUMBER
    (13) statement -> . SET_KNOBS NUMBER
    (14) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
    (15) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (17) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (18) statement -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (19) statement -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (22) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (23) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (25) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) statement -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (27) statement -> . MOVE NUMBER NUMBER NUMBER
    (28) statement -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (29) statement -> . SCALE NUMBER NUMBER NUMBER
    (30) statement -> . ROTATE XYZ NUMBER SYMBOL
    (31) statement -> . ROTATE XYZ NUMBER

    $end            reduce using rule 1 (stuff -> .)
    COMMENT         shift and go to state 6
    POP             shift and go to state 9
    PUSH            shift and go to state 12
    SCREEN          shift and go to state 14
    SAVE            shift and go to state 20
    DISPLAY         shift and go to state 5
    SET             shift and go to state 7
    SET_KNOBS       shift and go to state 10
    SPHERE          shift and go to state 15
    TORUS           shift and go to state 13
    BOX             shift and go to state 1
    LINE            shift and go to state 4
    CIRCLE          shift and go to state 19
    BEZIER          shift and go to state 17
    HERMITE         shift and go to state 8
    MOVE            shift and go to state 3
    SCALE           shift and go to state 2
    ROTATE          shift and go to state 16

    stuff                          shift and go to state 35
    statement                      shift and go to state 11

state 12

    (5) statement -> PUSH .

    COMMENT         reduce using rule 5 (statement -> PUSH .)
    POP             reduce using rule 5 (statement -> PUSH .)
    PUSH            reduce using rule 5 (statement -> PUSH .)
    SCREEN          reduce using rule 5 (statement -> PUSH .)
    SAVE            reduce using rule 5 (statement -> PUSH .)
    DISPLAY         reduce using rule 5 (statement -> PUSH .)
    SET             reduce using rule 5 (statement -> PUSH .)
    SET_KNOBS       reduce using rule 5 (statement -> PUSH .)
    SPHERE          reduce using rule 5 (statement -> PUSH .)
    TORUS           reduce using rule 5 (statement -> PUSH .)
    BOX             reduce using rule 5 (statement -> PUSH .)
    LINE            reduce using rule 5 (statement -> PUSH .)
    CIRCLE          reduce using rule 5 (statement -> PUSH .)
    BEZIER          reduce using rule 5 (statement -> PUSH .)
    HERMITE         reduce using rule 5 (statement -> PUSH .)
    MOVE            reduce using rule 5 (statement -> PUSH .)
    SCALE           reduce using rule 5 (statement -> PUSH .)
    ROTATE          reduce using rule 5 (statement -> PUSH .)
    $end            reduce using rule 5 (statement -> PUSH .)


state 13

    (16) statement -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (17) statement -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 36

state 14

    (6) statement -> SCREEN . INT INT
    (7) statement -> SCREEN .

    INT             shift and go to state 37
    COMMENT         reduce using rule 7 (statement -> SCREEN .)
    POP             reduce using rule 7 (statement -> SCREEN .)
    PUSH            reduce using rule 7 (statement -> SCREEN .)
    SCREEN          reduce using rule 7 (statement -> SCREEN .)
    SAVE            reduce using rule 7 (statement -> SCREEN .)
    DISPLAY         reduce using rule 7 (statement -> SCREEN .)
    SET             reduce using rule 7 (statement -> SCREEN .)
    SET_KNOBS       reduce using rule 7 (statement -> SCREEN .)
    SPHERE          reduce using rule 7 (statement -> SCREEN .)
    TORUS           reduce using rule 7 (statement -> SCREEN .)
    BOX             reduce using rule 7 (statement -> SCREEN .)
    LINE            reduce using rule 7 (statement -> SCREEN .)
    CIRCLE          reduce using rule 7 (statement -> SCREEN .)
    BEZIER          reduce using rule 7 (statement -> SCREEN .)
    HERMITE         reduce using rule 7 (statement -> SCREEN .)
    MOVE            reduce using rule 7 (statement -> SCREEN .)
    SCALE           reduce using rule 7 (statement -> SCREEN .)
    ROTATE          reduce using rule 7 (statement -> SCREEN .)
    $end            reduce using rule 7 (statement -> SCREEN .)


state 15

    (14) statement -> SPHERE . NUMBER NUMBER NUMBER NUMBER INT INT
    (15) statement -> SPHERE . NUMBER NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 38

state 16

    (30) statement -> ROTATE . XYZ NUMBER SYMBOL
    (31) statement -> ROTATE . XYZ NUMBER

    XYZ             shift and go to state 39


state 17

    (22) statement -> BEZIER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (23) statement -> BEZIER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 40

state 18

    (0) S' -> stuff .



state 19

    (20) statement -> CIRCLE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) statement -> CIRCLE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 41

state 20

    (8) statement -> SAVE .
    (9) statement -> SAVE . TEXT
    (34) TEXT -> . SYMBOL
    (35) TEXT -> . STRING
    (32) SYMBOL -> . XYZ
    (33) SYMBOL -> . ID

    COMMENT         reduce using rule 8 (statement -> SAVE .)
    POP             reduce using rule 8 (statement -> SAVE .)
    PUSH            reduce using rule 8 (statement -> SAVE .)
    SCREEN          reduce using rule 8 (statement -> SAVE .)
    SAVE            reduce using rule 8 (statement -> SAVE .)
    DISPLAY         reduce using rule 8 (statement -> SAVE .)
    SET             reduce using rule 8 (statement -> SAVE .)
    SET_KNOBS       reduce using rule 8 (statement -> SAVE .)
    SPHERE          reduce using rule 8 (statement -> SAVE .)
    TORUS           reduce using rule 8 (statement -> SAVE .)
    BOX             reduce using rule 8 (statement -> SAVE .)
    LINE            reduce using rule 8 (statement -> SAVE .)
    CIRCLE          reduce using rule 8 (statement -> SAVE .)
    BEZIER          reduce using rule 8 (statement -> SAVE .)
    HERMITE         reduce using rule 8 (statement -> SAVE .)
    MOVE            reduce using rule 8 (statement -> SAVE .)
    SCALE           reduce using rule 8 (statement -> SAVE .)
    ROTATE          reduce using rule 8 (statement -> SAVE .)
    $end            reduce using rule 8 (statement -> SAVE .)
    STRING          shift and go to state 27
    XYZ             shift and go to state 30
    ID              shift and go to state 31

    TEXT                           shift and go to state 42
    SYMBOL                         shift and go to state 29

state 21

    (36) NUMBER -> DOUBLE .

    DOUBLE          reduce using rule 36 (NUMBER -> DOUBLE .)
    INT             reduce using rule 36 (NUMBER -> DOUBLE .)
    XYZ             reduce using rule 36 (NUMBER -> DOUBLE .)
    ID              reduce using rule 36 (NUMBER -> DOUBLE .)
    COMMENT         reduce using rule 36 (NUMBER -> DOUBLE .)
    POP             reduce using rule 36 (NUMBER -> DOUBLE .)
    PUSH            reduce using rule 36 (NUMBER -> DOUBLE .)
    SCREEN          reduce using rule 36 (NUMBER -> DOUBLE .)
    SAVE            reduce using rule 36 (NUMBER -> DOUBLE .)
    DISPLAY         reduce using rule 36 (NUMBER -> DOUBLE .)
    SET             reduce using rule 36 (NUMBER -> DOUBLE .)
    SET_KNOBS       reduce using rule 36 (NUMBER -> DOUBLE .)
    SPHERE          reduce using rule 36 (NUMBER -> DOUBLE .)
    TORUS           reduce using rule 36 (NUMBER -> DOUBLE .)
    BOX             reduce using rule 36 (NUMBER -> DOUBLE .)
    LINE            reduce using rule 36 (NUMBER -> DOUBLE .)
    CIRCLE          reduce using rule 36 (NUMBER -> DOUBLE .)
    BEZIER          reduce using rule 36 (NUMBER -> DOUBLE .)
    HERMITE         reduce using rule 36 (NUMBER -> DOUBLE .)
    MOVE            reduce using rule 36 (NUMBER -> DOUBLE .)
    SCALE           reduce using rule 36 (NUMBER -> DOUBLE .)
    ROTATE          reduce using rule 36 (NUMBER -> DOUBLE .)
    $end            reduce using rule 36 (NUMBER -> DOUBLE .)


state 22

    (37) NUMBER -> INT .

    DOUBLE          reduce using rule 37 (NUMBER -> INT .)
    INT             reduce using rule 37 (NUMBER -> INT .)
    XYZ             reduce using rule 37 (NUMBER -> INT .)
    ID              reduce using rule 37 (NUMBER -> INT .)
    COMMENT         reduce using rule 37 (NUMBER -> INT .)
    POP             reduce using rule 37 (NUMBER -> INT .)
    PUSH            reduce using rule 37 (NUMBER -> INT .)
    SCREEN          reduce using rule 37 (NUMBER -> INT .)
    SAVE            reduce using rule 37 (NUMBER -> INT .)
    DISPLAY         reduce using rule 37 (NUMBER -> INT .)
    SET             reduce using rule 37 (NUMBER -> INT .)
    SET_KNOBS       reduce using rule 37 (NUMBER -> INT .)
    SPHERE          reduce using rule 37 (NUMBER -> INT .)
    TORUS           reduce using rule 37 (NUMBER -> INT .)
    BOX             reduce using rule 37 (NUMBER -> INT .)
    LINE            reduce using rule 37 (NUMBER -> INT .)
    CIRCLE          reduce using rule 37 (NUMBER -> INT .)
    BEZIER          reduce using rule 37 (NUMBER -> INT .)
    HERMITE         reduce using rule 37 (NUMBER -> INT .)
    MOVE            reduce using rule 37 (NUMBER -> INT .)
    SCALE           reduce using rule 37 (NUMBER -> INT .)
    ROTATE          reduce using rule 37 (NUMBER -> INT .)
    $end            reduce using rule 37 (NUMBER -> INT .)


state 23

    (18) statement -> BOX NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 43

state 24

    (28) statement -> SCALE NUMBER . NUMBER NUMBER SYMBOL
    (29) statement -> SCALE NUMBER . NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 44

state 25

    (26) statement -> MOVE NUMBER . NUMBER NUMBER SYMBOL
    (27) statement -> MOVE NUMBER . NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 45

state 26

    (19) statement -> LINE NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) NUMBER -> . DOUBLE
    (37) NUMBER -> . INT

    DOUBLE          shift and go to state 21
    INT             shift and go to state 22

    NUMBER                         shift and go to state 46

state 27

    (35) TEXT -> STRING .

    COMMENT         reduce using rule 35 (TEXT -> STRING .)
    POP             reduce using rule 35 (TEXT -> STRING .)
    PUSH            reduce using rule 35 (TEXT -> STRING .)
    SCREEN          reduce using rule 35 (TEXT -> STRING .)
    SAVE            reduce using rule 35 (TEXT -> STRING .)
    DISPLAY         reduce using rule 35 (TEXT -> STRING .)
    SET             reduce using rule 35 (TEXT -> STRING .)
    SET_KNOBS       reduce using rule 35 (TEXT -> STRING .)
    SPHERE          reduce using rule 35 (TEXT -> STRING .)
    TORUS           reduce using rule 35 (TEXT -> STRING .)
    BOX             reduce using rule 35 (TEXT -> STRING .)
    LINE            reduce using rule 35 (TEXT -> STRING .)
    CIRCLE          reduce using rule 35 (TEXT -> STRING .)
    BEZIER          reduce using rule 35 (TEXT -> STRING .)
    HERMITE         reduce using rule 35 (TEXT -> STRING .)
    MOVE            reduce using rule 35 (TEXT -> STRING .)
    SCALE           reduce using rule 35 (TEXT -> STRING .)
    ROTATE          reduce using rule 35 (TEXT -> STRING .)
    $end            reduce using rule 35 (TEXT -> STRING .)


state 28

    (10) statement -> DISPLAY TEXT .

    COMMENT         reduce using rule 10 (statement -> DISPLAY TEXT .)
    POP             reduce using rule 10 (statement -> DISPLAY TEXT .)
    PUSH            reduce using rule 10 (statement -> DISPLAY TEXT .)
    SCREEN          reduce using rule 10 (statement -> DISPLAY TEXT .)
    SAVE            reduce using rule 10 (statement -> DISPLAY TEXT .)
    DISPLAY         reduce using rule 10 (statement -> DISPLAY TEXT .)
    SET             reduce using rule 10 (statement -> DISPLAY TEXT .)
    SET_KNOBS       reduce using rule 10 (statement -> DISPLAY TEXT .)
    SPHERE          reduce using rule 10 (statement -> DISPLAY TEXT .)
    TORUS           reduce using rule 10 (statement -> DISPLAY TEXT .)
    BOX             reduce using rule 10 (statement -> DISPLAY TEXT .)
    LINE            reduce using rule 10 (statement -> DISPLAY TEXT .)
    CIRCLE          reduce using rule 10 (statement -> DISPLAY TEXT .)
    BEZIER          reduce using rule 10 (statement -> DISPLAY TEXT .)
    HERMITE         reduce using rule 10 (statement -> DISPLAY TEXT .)
    MOVE            reduce using rule 10 (statement -> DISPLAY TEXT .)
    SCALE           reduce using rule 10 (statement -> DISPLAY TEXT .)
    ROTATE          reduce using rule 10 (statement -> DISPLAY TEXT .)
    $end            reduce using rule 10 (statement -> DISPLAY TEXT .)


state 29

    (34) TEXT -> SYMBOL .

    COMMENT         reduce using rule 34 (TEXT -> SYMBOL .)
    POP             reduce using rule 34 (TEXT -> SYMBOL .)
    PUSH            reduce using rule 34 (TEXT -> SYMBOL .)
    SCREEN          reduce using rule 34 (TEXT -> SYMBOL .)
    SAVE            reduce using rule 34 (TEXT -> SYMBOL .)
    DISPLAY         reduce using rule 34 (TEXT -> SYMBOL .)
    SET             reduce using rule 34 (TEXT -> SYMBOL .)
    SET_KNOBS       reduce using rule 34 (TEXT -> SYMBOL .)
    SPHERE          reduce using rule 34 (TEXT -> SYMBOL .)
    TORUS           reduce using rule 34 (TEXT -> SYMBOL .)
    BOX             reduce using rule 34 (TEXT -> SYMBOL .)
    LINE            reduce using rule 34 (TEXT -> SYMBOL .)
    CIRCLE          reduce using rule 34 (TEXT -> SYMBOL .)
    BEZIER          reduce using rule 34 (TEXT -> SYMBOL .)
    HERMITE         reduce using rule 34 (TEXT -> SYMBOL .)
    MOVE            reduce using rule 34 (TEXT -> SYMBOL .)
    SCALE           reduce using rule 34 (TEXT -> SYMBOL .)
    ROTATE          reduce using rule 34 (TEXT -> SYMBOL .)
    $end            reduce using rule 34 (TEXT -> SYMBOL .)


state 30

    (32) SYMBOL -> XYZ .
